; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_az_generate_cname_answer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/services/extr_authzone.c_az_generate_cname_answer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.auth_zone = type { i32 }
%struct.query_info = type { i32 }
%struct.regional = type { i32 }
%struct.dns_msg = type { i32 }
%struct.auth_data = type { i32 }
%struct.auth_rrset = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.auth_zone*, %struct.query_info*, %struct.regional*, %struct.dns_msg*, %struct.auth_data*, %struct.auth_rrset*)* @az_generate_cname_answer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @az_generate_cname_answer(%struct.auth_zone* %0, %struct.query_info* %1, %struct.regional* %2, %struct.dns_msg* %3, %struct.auth_data* %4, %struct.auth_rrset* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.auth_zone*, align 8
  %9 = alloca %struct.query_info*, align 8
  %10 = alloca %struct.regional*, align 8
  %11 = alloca %struct.dns_msg*, align 8
  %12 = alloca %struct.auth_data*, align 8
  %13 = alloca %struct.auth_rrset*, align 8
  store %struct.auth_zone* %0, %struct.auth_zone** %8, align 8
  store %struct.query_info* %1, %struct.query_info** %9, align 8
  store %struct.regional* %2, %struct.regional** %10, align 8
  store %struct.dns_msg* %3, %struct.dns_msg** %11, align 8
  store %struct.auth_data* %4, %struct.auth_data** %12, align 8
  store %struct.auth_rrset* %5, %struct.auth_rrset** %13, align 8
  %14 = load %struct.auth_zone*, %struct.auth_zone** %8, align 8
  %15 = load %struct.regional*, %struct.regional** %10, align 8
  %16 = load %struct.dns_msg*, %struct.dns_msg** %11, align 8
  %17 = load %struct.auth_data*, %struct.auth_data** %12, align 8
  %18 = load %struct.auth_rrset*, %struct.auth_rrset** %13, align 8
  %19 = call i32 @msg_add_rrset_an(%struct.auth_zone* %14, %struct.regional* %15, %struct.dns_msg* %16, %struct.auth_data* %17, %struct.auth_rrset* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %22, label %21

21:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %40

22:                                               ; preds = %6
  %23 = load %struct.auth_rrset*, %struct.auth_rrset** %13, align 8
  %24 = icmp ne %struct.auth_rrset* %23, null
  br i1 %24, label %26, label %25

25:                                               ; preds = %22
  store i32 1, i32* %7, align 4
  br label %40

26:                                               ; preds = %22
  %27 = load %struct.auth_zone*, %struct.auth_zone** %8, align 8
  %28 = load %struct.query_info*, %struct.query_info** %9, align 8
  %29 = getelementptr inbounds %struct.query_info, %struct.query_info* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = load %struct.regional*, %struct.regional** %10, align 8
  %32 = load %struct.dns_msg*, %struct.dns_msg** %11, align 8
  %33 = load %struct.auth_rrset*, %struct.auth_rrset** %13, align 8
  %34 = getelementptr inbounds %struct.auth_rrset, %struct.auth_rrset* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = call i32 @follow_cname_chain(%struct.auth_zone* %27, i32 %30, %struct.regional* %31, %struct.dns_msg* %32, i32 %35)
  %37 = icmp ne i32 %36, 0
  br i1 %37, label %39, label %38

38:                                               ; preds = %26
  store i32 0, i32* %7, align 4
  br label %40

39:                                               ; preds = %26
  store i32 1, i32* %7, align 4
  br label %40

40:                                               ; preds = %39, %38, %25, %21
  %41 = load i32, i32* %7, align 4
  ret i32 %41
}

declare dso_local i32 @msg_add_rrset_an(%struct.auth_zone*, %struct.regional*, %struct.dns_msg*, %struct.auth_data*, %struct.auth_rrset*) #1

declare dso_local i32 @follow_cname_chain(%struct.auth_zone*, i32, %struct.regional*, %struct.dns_msg*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
